[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-metrics"
version = "0.1.0"
description = "Librería para métricas cuánticas de distancia"
authors = [
    { name="Tu Nombre", email="tu.correo@example.com" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy"]

[project.urls]
Homepage = "https://github.com/tuusuario/quantum-metrics"
