[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-metrics"
version = "0.1.0"
description = "Librería para métricas cuánticas de distancia"
authors = [
    { name="Areli Yesareth Guerrero Estrada", email="ayge.1904@gmail.com" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "pennylane"]

[project.urls]
Homepage = "https://github.com/yessichibii/quantum_metrics"
"Bug Tracker" = "https://github.com/yessichibii/quantum-metrics/issues"
